Implement: displaying total lines cleared to the `gameLayout.fxml` - added `totalLinesClearedProperty()` to pass the IntegerProperty - update total lines cleared with `GameController` - `GuiController` handles the lines displaying to the game screen by using `bindLines()`